all combinations of multiple lists working

--- a/scratch_pad.ipynb
+++ b/scratch_pad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +45,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['RM0614', 'RM0615', 'RM4615', 'RM4620', 'RM4621', 'RM4623', 'RM4626', 'RM6707', 'RM6713', 'RM6714', 'RM6718', 'RM6729']\n",
+      "[['RM0614', 'RM0615']]\n",
+      "[['RM0614', 'RM0615'], ['RM4615', 'RM4620', 'RM4621', 'RM4623', 'RM4626']]\n",
+      "[['RM0614', 'RM0615'], ['RM4615', 'RM4620', 'RM4621', 'RM4623', 'RM4626'], ['RM6707', 'RM6713', 'RM6714', 'RM6718', 'RM6729']]\n",
+      "Antimony Oxide ['RM0614', 'RM0615']\n",
+      "Manganic Oxide ['RM4615', 'RM4620', 'RM4621', 'RM4623', 'RM4626']\n",
+      "Titanium Dioxide - Anatase ['RM6707', 'RM6713', 'RM6714', 'RM6718', 'RM6729']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "product_ingredients = formula_ingred_df['Ingredient'].tolist()\n",
+    "test_dict = {}\n",
+    "test_list = []\n",
+    "for i in range(len(product_ingredients)):\n",
+    "   ingred = product_ingredients[i]\n",
+    "   df_ingred = approv_ingred_df.loc[approv_ingred_df['ingredient_name'] == ingred]\n",
+    "   ingred_list = df_ingred['rm_code'].to_list()\n",
+    "   test_dict[ingred] = ingred_list\n",
+    "   test_list.append(test_dict[ingred])\n",
+    "   print(test_list)\n",
+    "\n",
+    "\n",
+    "for key, value in test_dict.items():\n",
+    "   print(key,value)\n",
+    "#    approv_ingred_df.iloc\n",
+    "\n",
+    "# prod = os.path.splitext(selected_file)[0]  # separate filename from extension \n",
+    "# df_prod_specs = df_all_specs.iloc[lambda x: x.index == prod]  # filter specifications by product name from the selected file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('RM0614', 'RM4615', 'RM6707'), ('RM0614', 'RM4615', 'RM6713'), ('RM0614', 'RM4615', 'RM6714'), ('RM0614', 'RM4615', 'RM6718'), ('RM0614', 'RM4615', 'RM6729'), ('RM0614', 'RM4620', 'RM6707'), ('RM0614', 'RM4620', 'RM6713'), ('RM0614', 'RM4620', 'RM6714'), ('RM0614', 'RM4620', 'RM6718'), ('RM0614', 'RM4620', 'RM6729'), ('RM0614', 'RM4621', 'RM6707'), ('RM0614', 'RM4621', 'RM6713'), ('RM0614', 'RM4621', 'RM6714'), ('RM0614', 'RM4621', 'RM6718'), ('RM0614', 'RM4621', 'RM6729'), ('RM0614', 'RM4623', 'RM6707'), ('RM0614', 'RM4623', 'RM6713'), ('RM0614', 'RM4623', 'RM6714'), ('RM0614', 'RM4623', 'RM6718'), ('RM0614', 'RM4623', 'RM6729'), ('RM0614', 'RM4626', 'RM6707'), ('RM0614', 'RM4626', 'RM6713'), ('RM0614', 'RM4626', 'RM6714'), ('RM0614', 'RM4626', 'RM6718'), ('RM0614', 'RM4626', 'RM6729'), ('RM0615', 'RM4615', 'RM6707'), ('RM0615', 'RM4615', 'RM6713'), ('RM0615', 'RM4615', 'RM6714'), ('RM0615', 'RM4615', 'RM6718'), ('RM0615', 'RM4615', 'RM6729'), ('RM0615', 'RM4620', 'RM6707'), ('RM0615', 'RM4620', 'RM6713'), ('RM0615', 'RM4620', 'RM6714'), ('RM0615', 'RM4620', 'RM6718'), ('RM0615', 'RM4620', 'RM6729'), ('RM0615', 'RM4621', 'RM6707'), ('RM0615', 'RM4621', 'RM6713'), ('RM0615', 'RM4621', 'RM6714'), ('RM0615', 'RM4621', 'RM6718'), ('RM0615', 'RM4621', 'RM6729'), ('RM0615', 'RM4623', 'RM6707'), ('RM0615', 'RM4623', 'RM6713'), ('RM0615', 'RM4623', 'RM6714'), ('RM0615', 'RM4623', 'RM6718'), ('RM0615', 'RM4623', 'RM6729'), ('RM0615', 'RM4626', 'RM6707'), ('RM0615', 'RM4626', 'RM6713'), ('RM0615', 'RM4626', 'RM6714'), ('RM0615', 'RM4626', 'RM6718'), ('RM0615', 'RM4626', 'RM6729')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_combinations = list(it.product(*test_list))\n",
+    "print(all_combinations)\n",
+    "\n",
+    "# aggregate batch ingredients and count ratio of grade 1?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Antimony Oxide', 'Manganic Oxide', 'Titanium Dioxide - Anatase']\n",
       "\n"
      ]
@@ -62,8 +121,6 @@
     "# approv_ingred_df = pd.read_excel('data/approved_ingredients.xlsx').set_index('ingredient_name')\n",
     "\n",
     "product_ingredients = formula_ingred_df['Ingredient'].tolist()\n",
-    "approved_list = approv_ingred_df['rm_code'].tolist()\n",
-    "print(approved_list)\n",
     "print(product_ingredients)\n",
     "\n",
     "listA = ['a','b','c','d','e']\n",
