changed files from xlsx to csv

--- a/scratch_pad.ipynb
+++ b/scratch_pad.ipynb
@@ -197,7 +197,7 @@
     "    print('No product was selected from the cell above. Please select a product in the cell above to continue.')\n",
     "else:\n",
     "    path = 'data/'\n",
-    "    file_ext = \".xlsx\"\n",
+    "    file_ext = \".csv\"\n",
     "    prod_ingredient_file = path + selected_product + \"_ingredients\" + file_ext\n",
     "    prod_color_results = path + selected_product + \"_color_results\" + file_ext\n",
     "    approved_ingredients = path + \"approved_ingredients\" + file_ext  # all products are in this file\n",
@@ -218,13 +218,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ingredient_df = pd.read_excel(prod_ingredient_file)  # ingriendients used for each batch of selected product\n",
-    "color_results_df= pd.read_excel(prod_color_results)  # color results for each batch of selected product\n",
-    "approv_ingred_df = pd.read_excel(approved_ingredients).sort_values(by=['Material','rm_code'])\n",
+    "ingredient_df = pd.read_csv(prod_ingredient_file)  # ingriendients used for each batch of selected product\n",
+    "color_results_df= pd.read_csv(prod_color_results)  # color results for each batch of selected product\n",
+    "approv_ingred_df = pd.read_csv(approved_ingredients).sort_values(by=['Material','rm_code'])\n",
     "approv_ingred_df = approv_ingred_df[approv_ingred_df['Material']== selected_product + '-RMIX']  # filter df by selected product\n",
-    "formula_df = pd.read_excel(formulas).sort_values(by=['Material','Ingredient'])\n",
+    "formula_df = pd.read_csv(formulas).sort_values(by=['Material','Ingredient'])\n",
     "formula_df = formula_df[formula_df['Material']== selected_product + '-RMIX']  # filter df by selected product\n",
-    "product_specs_df = pd.read_excel(specifications)\n",
+    "product_specs_df = pd.read_csv(specifications)\n",
     "product_specs_df = product_specs_df[product_specs_df['product'] == selected_product].set_index('product')"
    ]
   },
