Added color results for another product

--- a/scratch_pad.ipynb
+++ b/scratch_pad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You selected BR0010P850\n"
+      "You selected YL0010C229\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date Issued</th>\n",
+       "      <th>Material</th>\n",
+       "      <th>Order</th>\n",
+       "      <th>RMIX Batch</th>\n",
+       "      <th>Antimony Oxide</th>\n",
+       "      <th>Chromium Oxide</th>\n",
+       "      <th>Titanium Dioxide - Anatase</th>\n",
+       "      <th>Titanium Dioxide - Rutile</th>\n",
+       "      <th>Kiln</th>\n",
+       "      <th>Hearth</th>\n",
+       "      <th>Cycle</th>\n",
+       "      <th>Temp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3/4/2016</td>\n",
+       "      <td>YL0010C229-Rmix</td>\n",
+       "      <td>PN0003809</td>\n",
+       "      <td>2411</td>\n",
+       "      <td>RM0613</td>\n",
+       "      <td>RM1522</td>\n",
+       "      <td>RM6709</td>\n",
+       "      <td>RM6748</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1980.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3/4/2016</td>\n",
+       "      <td>YL0010C229-Rmix</td>\n",
+       "      <td>PN0003810</td>\n",
+       "      <td>2412</td>\n",
+       "      <td>RM0613</td>\n",
+       "      <td>RM1522</td>\n",
+       "      <td>RM6709</td>\n",
+       "      <td>RM6748</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1980.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3/4/2016</td>\n",
+       "      <td>YL0010C229-Rmix</td>\n",
+       "      <td>PN0003811</td>\n",
+       "      <td>2413</td>\n",
+       "      <td>RM0613</td>\n",
+       "      <td>RM1522</td>\n",
+       "      <td>RM6709</td>\n",
+       "      <td>RM6748</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1975.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3/4/2016</td>\n",
+       "      <td>YL0010C229-Rmix</td>\n",
+       "      <td>PN0003812</td>\n",
+       "      <td>2414</td>\n",
+       "      <td>RM0613</td>\n",
+       "      <td>RM1522</td>\n",
+       "      <td>RM6709</td>\n",
+       "      <td>RM6748</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1980.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5/16/2016</td>\n",
+       "      <td>YL0010C229-Rmix</td>\n",
+       "      <td>PN0007848</td>\n",
+       "      <td>5271</td>\n",
+       "      <td>RM0613</td>\n",
+       "      <td>RM1522</td>\n",
+       "      <td>RM6709</td>\n",
+       "      <td>RM6748</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1985.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YL0010C229-RMIX</td>\n",
+       "      <td>1146815</td>\n",
+       "      <td>44263</td>\n",
+       "      <td>RM0614</td>\n",
+       "      <td>RM1521</td>\n",
+       "      <td>RM6707</td>\n",
+       "      <td>RM6749</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1935.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YL0010C229-RMIX</td>\n",
+       "      <td>1146816</td>\n",
+       "      <td>44265</td>\n",
+       "      <td>RM0614</td>\n",
+       "      <td>RM1521</td>\n",
+       "      <td>RM6707</td>\n",
+       "      <td>RM6749</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1935.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YL0010C229-RMIX</td>\n",
+       "      <td>1146817</td>\n",
+       "      <td>44266</td>\n",
+       "      <td>RM0614</td>\n",
+       "      <td>RM1521</td>\n",
+       "      <td>RM6707</td>\n",
+       "      <td>RM6749</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1935.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>391</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YL0010C229-RMIX</td>\n",
+       "      <td>4001065</td>\n",
+       "      <td>27415</td>\n",
+       "      <td>RM0646</td>\n",
+       "      <td>RM1522</td>\n",
+       "      <td>RM6707</td>\n",
+       "      <td>RM6742</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1935.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YL0010C229-RMIX</td>\n",
+       "      <td>4001391</td>\n",
+       "      <td>33671</td>\n",
+       "      <td>RM0613</td>\n",
+       "      <td>RM1510</td>\n",
+       "      <td>RM6714</td>\n",
+       "      <td>RM6749</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1935.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>393 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Date Issued         Material      Order  RMIX Batch Antimony Oxide  \\\n",
+       "0      3/4/2016  YL0010C229-Rmix  PN0003809        2411         RM0613   \n",
+       "1      3/4/2016  YL0010C229-Rmix  PN0003810        2412         RM0613   \n",
+       "2      3/4/2016  YL0010C229-Rmix  PN0003811        2413         RM0613   \n",
+       "3      3/4/2016  YL0010C229-Rmix  PN0003812        2414         RM0613   \n",
+       "4     5/16/2016  YL0010C229-Rmix  PN0007848        5271         RM0613   \n",
+       "..          ...              ...        ...         ...            ...   \n",
+       "388         NaN  YL0010C229-RMIX    1146815       44263         RM0614   \n",
+       "389         NaN  YL0010C229-RMIX    1146816       44265         RM0614   \n",
+       "390         NaN  YL0010C229-RMIX    1146817       44266         RM0614   \n",
+       "391         NaN  YL0010C229-RMIX    4001065       27415         RM0646   \n",
+       "392         NaN  YL0010C229-RMIX    4001391       33671         RM0613   \n",
+       "\n",
+       "    Chromium Oxide Titanium Dioxide - Anatase Titanium Dioxide - Rutile  Kiln  \\\n",
+       "0           RM1522                     RM6709                    RM6748  10.0   \n",
+       "1           RM1522                     RM6709                    RM6748  12.0   \n",
+       "2           RM1522                     RM6709                    RM6748  10.0   \n",
+       "3           RM1522                     RM6709                    RM6748  10.0   \n",
+       "4           RM1522                     RM6709                    RM6748  11.0   \n",
+       "..             ...                        ...                       ...   ...   \n",
+       "388         RM1521                     RM6707                    RM6749  13.0   \n",
+       "389         RM1521                     RM6707                    RM6749  13.0   \n",
+       "390         RM1521                     RM6707                    RM6749  13.0   \n",
+       "391         RM1522                     RM6707                    RM6742  13.0   \n",
+       "392         RM1510                     RM6714                    RM6749  13.0   \n",
+       "\n",
+       "     Hearth  Cycle    Temp  \n",
+       "0       1.0    NaN  1980.0  \n",
+       "1       2.0    NaN  1980.0  \n",
+       "2       2.0    NaN  1975.0  \n",
+       "3       2.0    NaN  1980.0  \n",
+       "4       1.0    NaN  1985.0  \n",
+       "..      ...    ...     ...  \n",
+       "388     NaN    NaN  1935.0  \n",
+       "389     NaN    NaN  1935.0  \n",
+       "390     NaN    NaN  1935.0  \n",
+       "391     NaN    NaN  1935.0  \n",
+       "392     NaN    NaN  1935.0  \n",
+       "\n",
+       "[393 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ingredient_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -250,23 +513,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 228 entries, 0 to 227\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column                      Non-Null Count  Dtype         \n",
-      "---  ------                      --------------  -----         \n",
-      " 0   Date Issued                 66 non-null     datetime64[ns]\n",
-      " 1   Material                    228 non-null    object        \n",
-      " 2   Order                       66 non-null     float64       \n",
-      " 3   RMIX Batch                  228 non-null    int64         \n",
-      " 4   Antimony Oxide              228 non-null    object        \n",
-      " 5   Manganic Oxide              228 non-null    object        \n",
-      " 6   Titanium Dioxide - Anatase  228 non-null    object        \n",
-      " 7   Kiln                        66 non-null     float64       \n",
-      " 8   Hearth                      0 non-null      float64       \n",
-      " 9   Cycle                       0 non-null      float64       \n",
-      " 10  Temp                        0 non-null      float64       \n",
-      "dtypes: datetime64[ns](1), float64(5), int64(1), object(4)\n",
-      "memory usage: 19.7+ KB\n",
+      "RangeIndex: 393 entries, 0 to 392\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   Date Issued                 219 non-null    object \n",
+      " 1   Material                    393 non-null    object \n",
+      " 2   Order                       393 non-null    object \n",
+      " 3   RMIX Batch                  393 non-null    int64  \n",
+      " 4   Antimony Oxide              393 non-null    object \n",
+      " 5   Chromium Oxide              393 non-null    object \n",
+      " 6   Titanium Dioxide - Anatase  393 non-null    object \n",
+      " 7   Titanium Dioxide - Rutile   393 non-null    object \n",
+      " 8   Kiln                        392 non-null    float64\n",
+      " 9   Hearth                      104 non-null    float64\n",
+      " 10  Cycle                       0 non-null      float64\n",
+      " 11  Temp                        392 non-null    float64\n",
+      "dtypes: float64(4), int64(1), object(7)\n",
+      "memory usage: 37.0+ KB\n",
       "None\n"
      ]
     }
@@ -284,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -310,22 +574,22 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 220 entries, 0 to 219\n",
+      "RangeIndex: 390 entries, 0 to 389\n",
       "Data columns (total 10 columns):\n",
       " #   Column      Non-Null Count  Dtype  \n",
       "---  ------      --------------  -----  \n",
-      " 0   RMIX Batch  220 non-null    int64  \n",
-      " 1   Fin Batch   220 non-null    int64  \n",
-      " 2   Equip       220 non-null    object \n",
-      " 3   MDL         220 non-null    float64\n",
-      " 4   MDA         220 non-null    float64\n",
-      " 5   MDB         220 non-null    float64\n",
-      " 6   TDL         220 non-null    float64\n",
-      " 7   TDA         220 non-null    float64\n",
-      " 8   TDB         220 non-null    float64\n",
-      " 9   STR         220 non-null    int64  \n",
-      "dtypes: float64(6), int64(3), object(1)\n",
-      "memory usage: 17.3+ KB\n",
+      " 0   RMIX Batch  390 non-null    object \n",
+      " 1   Fin Batch   390 non-null    int64  \n",
+      " 2   Equip       172 non-null    object \n",
+      " 3   MDL         390 non-null    float64\n",
+      " 4   MDA         390 non-null    float64\n",
+      " 5   MDB         390 non-null    float64\n",
+      " 6   TDL         390 non-null    float64\n",
+      " 7   TDA         390 non-null    float64\n",
+      " 8   TDB         390 non-null    float64\n",
+      " 9   STR         390 non-null    int64  \n",
+      "dtypes: float64(6), int64(2), object(2)\n",
+      "memory usage: 30.6+ KB\n",
       "None\n"
      ]
     }
